[gd_scene load_steps=7 format=3 uid="uid://c20dh1qmn5j43"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_36yaj"]
[ext_resource type="Texture2D" uid="uid://cikqkvfdbbyy7" path="res://graphics/enemies/scout.png" id="1_abm32"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_r8r55"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r7teq"]
radius = 995.05

[sub_resource type="CircleShape2D" id="CircleShape2D_hk0a2"]
radius = 52.0096

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3o1h4"]
shader = ExtResource("2_r8r55")
shader_parameter/color = Color(0.200323, 0.704695, 0.699263, 1)
shader_parameter/progress = 0.0

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_36yaj")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_r7teq")
debug_color = Color(0.996078, 0, 0, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_hk0a2")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3o1h4")
position = Vector2(40, 27)
rotation = 1.5708
texture = ExtResource("1_abm32")

[node name="LaserSpawnPositions" type="Node2D" parent="."]
visible = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(131, 12)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(122, -27)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]

[node name="DamageCooldown" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
